--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="text-center col-12">
         <hr>
         <a href="https://mailchi.mp/2b64b5574bef/ztmstudents">
-          "><button class="btn btn-primary btn-xl">Find out more</button>
+          <button class="btn btn-primary btn-xl">Find out more</button>
         </a>
       </section>
     </div>
